# Eris

./: .gitignore  README.md  pom.xml
core/src/main/java/org/eris/: MessageStore.java  Node.java  Router.java
core/src/main/java/org/eris/security/: Ticket.java
docs/: architecture.dia
source-c/: CMakeLists.txt  config.sh
source-c/include/eris/: eris.h  eris_node.h  queue_node.h  util.h
source-c/src/: eris_node.c  queue_node.c  util.c
source-java/: pom.xml
source-java/core/: pom.xml
source-java/core/src/main/java/org/eris/: Address.java  EntryPoint.java  ErisMessage.java  Route.java  Router.java
source-java/core/src/main/java/org/eris/security/: Principal.java
source-java/impl/: pom.xml
source-java/impl/src/main/java/org/eris/titan/util/: ManagementMessageFactory.java
source-java/messaging/: pom.xml
source-java/messaging-amqp/: pom.xml
source-java/messaging-amqp-proton/: pom.xml
source-java/messaging-amqp-proton/src/main/java/org/eris/messaging/amqp/proton/: ConnectionImpl.java  ConnectionSettingsImpl.java  IncommingMessage.java  MessagingFactoryImpl.java  SenderImpl.java
source-java/messaging-amqp-proton/src/main/java/org/eris/messaging/server/amqp/proton/: FrameHandlerImpl.java  InboundConnectionImpl.java  (+1 more)
source-java/messaging-amqp/src/main/java/org/eris/messaging/amqp/proton/: ConnectionImpl.java  InboundConnectionImpl.java  InboundConnectorImpl.java  InboundMessageImpl.java  InboundSessionImpl.java  MessagingFactoryImpl.java  PublisherImpl.java  ReceiverImpl.java  SessionImpl.java  SubscriberImpl.java  TrackerImpl.java
source-java/messaging-amqp/src/main/java/org/eris/network/io/: IoNetworkConnection.java  IoReceiver.java  IoSender.java  ServerImpl.java
source-java/messaging-amqp/src/main/java/org/eris/threading/: DefaultThreadFactory.java  LoggingUncaughtExceptionHandler.java  ThreadExecutorImpl.java
source-java/messaging-amqp/src/main/java/org/eris/util/: ConditionManagerTimeoutException.java
source-java/messaging-amqp/src/test/java/org/eris/test/: ErisSendTest.java
source-java/messaging/src/main/java/org/eris/: Messaging.java  MessagingFactory.java
source-java/messaging/src/main/java/org/eris/messaging/: CompletionListener.java  Connection.java  ConnectionException.java  ConnectionSettings.java  CreditMode.java  InboundConnection.java  InboundConnectionListener.java  Message.java  Messaging.java  MessagingException.java  OutboundConnection.java  Receiver.java  ReceiverException.java  ReceiverMode.java  Sender.java  SenderMode.java  Session.java  SessionException.java  TimeoutException.java  Tracker.java  TrackerState.java  TransportException.java
source-java/messaging/src/main/java/org/eris/messaging/amqp/proton/: ConnectionImpl.java  ConnectionSettingsImpl.java  IncommingMessage.java  MessagingImpl.java  ReceiverImpl.java  SenderImpl.java  SessionImpl.java  TrackerImpl.java
source-java/messaging/src/main/java/org/eris/messaging/server/: ConnectionEventListener.java  Delivery.java  EventListener.java  InboundConnection.java  InboundConnectionListener.java  InboundConnector.java  InboundSession.java  Link.java  LinkType.java  MessageDelivery.java  Publisher.java  ReasonCode.java  ServerConnectionSettings.java  Subscriber.java
source-java/messaging/src/main/java/org/eris/network/: NetworkConnection.java  NetworkConnectionListener.java  NetworkException.java  Receiver.java  Sender.java  SenderClosedException.java  SenderException.java  Server.java  TransportException.java
source-java/messaging/src/main/java/org/eris/threading/: Threading.java
source-java/messaging/src/main/java/org/eris/transport/: NetworkConnection.java  SenderException.java  Server.java  TransportException.java
source-java/messaging/src/main/java/org/eris/transport/io/: IoNetworkConnection.java  IoSender.java  ServerImpl.java
source-java/messaging/src/test/java/org/eris/test/: ErisSendTest.java  MockBroker.java
source-java/network/: pom.xml
source-java/network/src/main/java/org/eris/network/io/: IoNetworkConnection.java  IoReceiver.java  ServerImpl.java
source-java/standalone/src/main/java/org/eris/titan/: ErisNode.java  ManagementMessageProperties.java
source-java/standalone/src/main/java/org/eris/titan/msgstore/: ManagedMessageStore.java  TransientQueueStore.java
source-java/standalone/src/main/java/org/eris/titan/util/: Functions.java
source-java/transport/: pom.xml
source-java/transport/src/main/java/org/eris/messaging/: Connection.java  ConnectionException.java  ConnectionSettings.java  Messaging.java  MessagingException.java  Receiver.java  Sender.java  SenderException.java  SenderMode.java  Session.java  SessionException.java  TimeoutException.java  Tracker.java
source-java/transport/src/main/java/org/eris/messaging/amqp/proton/: EndpointStateHelper.java  MessageImpl.java  SenderImpl.java  SessionImpl.java
source-java/transport/src/main/java/org/eris/transport/: NetworkConnection.java  SenderClosedException.java
source-java/transport/src/main/java/org/eris/transport/amqp/proton/: ConnectionImpl.java  EndpointStateHelper.java  IncommingMessage.java  MessageImpl.java  MessagingImpl.java  ProtonConnection.java  ReceiverImpl.java  SenderImpl.java  SessionImpl.java  TrackerImpl.java
source-java/transport/src/main/java/org/eris/transport/io/: ConnectionSettings.java  IoNetworkConnection.java  IoReceiver.java  IoSender.java
source-java/transport/src/test/java/org/eris/test/: ErisSendTest.java  MockBroker.java
source-java/util/: pom.xml
source-java/util/src/main/java/org/eris/logging/: Logger.java
source-java/util/src/main/java/org/eris/threading/: QpidThreadExecutor.java  RealtimeThreadFactory.java  ThreadFactory.java  Threading.java
source-java/util/src/main/java/org/eris/util/: ConditionManager.java
standalone/src/main/java/org/eris/titan/: ErisMessageImpl.java
(+6 files in other folders)
